--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">Homework3</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="txt_author_descriptor">By %1$s</string>
+    <string name="txt_search">Search</string>
+    <string name="btn_submit">Submit</string>
+    <string name="txt_related_articles">Related Articles:</string>
+
+    <string name="title_activity_full_article_page">Full Article</string>
 </resources>
